<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


    <!--
    android:textAlignment 字体居中
    android:textStyle 字体风格
    android:typeface  字体
    -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#B9B9ff"
            android:text="@string/start_select_food"
            android:textAlignment="center"
            android:textColor="#8a2be2"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:typeface="monospace" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="22sp" />

            <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/input_name_hint" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="22sp" />

            <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/man"
                        android:textSize="22sp" />

                <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/woman"
                        android:textSize="22sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="喜好"
                    android:textSize="22sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <CheckBox
                        android:id="@+id/hotCheckBox"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/hot"
                        android:textSize="22sp" />

                <CheckBox
                        android:id="@+id/sourCheckBox"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sour"
                        android:textSize="22sp" />

                <CheckBox
                        android:id="@+id/seafoodCheckBox"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/seafood"
                        android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textSize="22sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textSize="22sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/_0yuan"
                        android:layout_gravity="center_vertical"
                        android:textSize="15sp" />

                <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:max="100" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100yuan"
                        android:layout_gravity="center_vertical"
                        android:textSize="10sp" />
            </LinearLayout>


        </LinearLayout>

        <Button
                android:id="@+id/searchButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/searchFood"
                android:textSize="22sp" />
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_launcher_foreground" />

        <ToggleButton
                android:id="@+id/showToggleButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textOff="@string/next"
                android:textOn="@string/displayInformation"
                android:textSize="22sp" />

    </LinearLayout>


</LinearLayout>